--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,25 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover">
+  <!--  苹果WebApp 全屏模式 -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!-- 苹果工具栏颜色 -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#fff"/>
+  <!-- 忽略电话，email识别 -->
+  <meta name="format-detection" content="telphone=no, email=no"/>
   <!-- 知乎图片防盗链 -->
   <meta name="referrer" content="never">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
   <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
+  <!-- ios启动图 -->
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-640.png" sizes="640x1136">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-750.png" sizes="750x1334">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1242.png" sizes="1242x2208">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1125.png" sizes="1125x2436">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1536.png" sizes="1536x2048">
   <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
   <!-- Add to home screen for Safari on iOS -->
   <link rel="apple-touch-icon" sizes="57x57" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-icon-57x57.png">
@@ -26,7 +40,7 @@
   <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
   <meta name="theme-color" content="#2591D0">
   <!-- Add to home screen for Windows -->
-  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="msapplication-TileColor" content="#fff">
   <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/ms-icon-144x144.png">
   <% for (var chunk of webpack.chunks) {
       for (var file of chunk.files) {
