--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   <!--  苹果WebApp 全屏模式 -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <!-- 苹果工具栏颜色 -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#fff"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="#fff" />
   <!-- 忽略电话，email识别 -->
-  <meta name="format-detection" content="telphone=no, email=no"/>
+  <meta name="format-detection" content="telphone=no, email=no" />
   <!-- 知乎图片防盗链 -->
   <meta name="referrer" content="never">
   <title>
@@ -19,11 +19,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
   <!-- ios启动图 -->
-  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-640.png" sizes="640x1136">
-  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-750.png" sizes="750x1334">
-  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1242.png" sizes="1242x2208">
-  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1125.png" sizes="1125x2436">
-  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1536.png" sizes="1536x2048">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-640.png"
+    media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-750.png"
+    media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1242.png"
+    media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1125.png"
+    media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-splash-1536.png"
+    media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
   <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
   <!-- Add to home screen for Safari on iOS -->
   <link rel="apple-touch-icon" sizes="57x57" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-icon-57x57.png">
@@ -47,6 +52,8 @@
         if (file.match(/\.(js|css)$/)) { %>
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>">
     <% }}} %>
+  <!--  知乎日报文章样式，保证首次加载有样式 -->
+  <link charset="utf-8" rel="stylesheet" type="text/css" href="https://news-at.zhihu.com/css/news_qa.auto.css?v=4b3e3">
 </head>
 
 <body>
